Add jvm 17 params to readme